--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.451 2004/03/04 15:49:47 wiz Exp $
+# $NetBSD: Makefile,v 1.452 2004/03/06 12:05:53 grant Exp $
 #
 
 COMMENT=	Networking tools
@@ -367,6 +367,7 @@ SUBDIR+=	yafc
 SUBDIR+=	yale-tftpd
 SUBDIR+=	yaz
 SUBDIR+=	ytalk
+SUBDIR+=	ytalk-x11
 SUBDIR+=	ywho
 SUBDIR+=	zebra
 
