--- a/www/mozilla-gtk2/Makefile
+++ b/www/mozilla-gtk2/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.3 2004/02/23 10:21:11 recht Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/06 13:45:37 jmmv Exp $
 
 MOZILLA=	mozilla-gtk2
 MOZILLA_BIN=	mozilla-bin
 MOZ_VER=	1.6
-PKGREVISION=	2
+PKGREVISION=	3
 EXTRACT_SUFX=	.tar.bz2
 
 DISTFILES=	${DISTNAME}${EXTRACT_SUFX}
@@ -18,5 +18,6 @@ BUILD_MATHML=	# defined
 BUILD_CALENDAR=	# defined
 
 MOZILLA_USE_GTK2=	# defined
+MOZILLA_USE_XFT=	YES
 
 .include	"../../www/mozilla/Makefile.common"
