--- a/net/SDL_net/Makefile
+++ b/net/SDL_net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2003/07/26 21:41:28 jmmv Exp $
+# $NetBSD: Makefile,v 1.11 2004/03/06 17:28:59 xtraeme Exp $
 #
 
 DISTNAME=	SDL_net-1.2.5
@@ -10,13 +10,11 @@ MAINTAINER=	zuntum@NetBSD.org
 HOMEPAGE=	http://www.libsdl.org/projects/SDL_net/
 COMMENT=	Small sample cross-platform networking library for SDL
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 GNU_CONFIGURE=		YES
-
 USE_LIBTOOL=            YES
-LTCONFIG_OVERRIDE=      ${WRKSRC}/ltconfig
 
 CONFIGURE_ARGS+=	--disable-gui
 
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
