--- a/devel/SDL_ttf/Makefile
+++ b/devel/SDL_ttf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2003/07/26 21:41:11 jmmv Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/06 17:47:30 xtraeme Exp $
 #
 
 DISTNAME=	SDL_ttf-2.0.3
@@ -10,13 +10,12 @@ MAINTAINER=	zuntum@NetBSD.org
 HOMEPAGE=	http://www.libsdl.org/projects/SDL_ttf/
 COMMENT=	Use TrueType fonts in your SDL applications
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 USE_LIBTOOL=		YES
-LTCONFIG_OVERRIDE=	${WRKSRC}/ltconfig
 
-.include "../../devel/SDL/buildlink2.mk"
-.include "../../graphics/freetype2/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
+.include "../../graphics/freetype2/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
