--- a/databases/gnats/Makefile
+++ b/databases/gnats/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2004/01/25 02:55:14 grant Exp $
+# $NetBSD: Makefile,v 1.13 2004/03/06 18:27:47 recht Exp $
 
 DISTNAME=	gnats-3.113.1
 CATEGORIES=	devel
-MASTER_SITES=	${MASTER_SITE_GNU=gnats/}
+MASTER_SITES=	${MASTER_SITE_GNU:=gnats/}
 
 MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/gnats/
