--- a/games/rocksndiamonds/Makefile
+++ b/games/rocksndiamonds/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2003/12/17 21:30:39 heinz Exp $
+# $NetBSD: Makefile,v 1.18 2004/03/06 20:08:20 heinz Exp $
 #
 
 .include "Makefile.common"
@@ -7,9 +7,9 @@ COMMENT=	Game like Boulder Dash, Emerald Mine, or Sokoban (X11 build)
 
 .if ${OPSYS} == "SunOS"
 ALL_TARGET=	solaris
-.elif ${OPSYS} == "Darwin"
-ALL_TARGET=	mac
 .else
 ALL_TARGET=	x11
 .endif
 CONFLICTS=	rocksndiamonds-sdl-[1-9]*
+# MacOS X/Darwin always needs sdl, so use rocksndiamonds-sdl
+NOT_FOR_PLATFORM=	Darwin-*-*
