--- a/games/newvox/Makefile
+++ b/games/newvox/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2003/07/26 21:41:21 jmmv Exp $
+# $NetBSD: Makefile,v 1.13 2004/03/06 20:16:47 snj Exp $
 #
 
 DISTNAME=	newvox-1.0
@@ -10,9 +10,9 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.libsdl.org/projects/newvox/index.html
 COMMENT=	Voxel-style landscape rendering fly-by
 
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 USE_X11=	YES
 GNU_CONFIGURE=	YES
 
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
