--- a/games/zombies/Makefile
+++ b/games/zombies/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/17 21:39:50 grant Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/06 20:28:20 snj Exp $
 
 DISTNAME=		zombies-1.0
 CATEGORIES=		games
@@ -8,4 +8,7 @@ MASTER_SITES=		http://www.thistledown.com.au/software/ \
 MAINTAINER=		simonb@NetBSD.org
 COMMENT=		Simple robots-like game where you destroy the zombies
 
+USE_BUILDLINK3=		YES
+
+.include "../../mk/curses.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
