--- a/games/digger/Makefile
+++ b/games/digger/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2003/09/26 06:06:34 wiz Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/06 20:35:30 snj Exp $
 #
 
 DISTNAME=		digger-20020314
@@ -9,7 +9,7 @@ MAINTAINER=		wiz@NetBSD.org
 HOMEPAGE=		http://www.digger.org/
 COMMENT=		Digger Remastered
 
-USE_BUILDLINK2=		yes
+USE_BUILDLINK3=		yes
 
 MAKEFILE=		Makefile.fbsd
 MAKE_FLAGS+=		-DSDL
@@ -17,5 +17,5 @@ MAKE_FLAGS+=		-DSDL
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/digger ${PREFIX}/bin/digger
 
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
