--- a/games/prboom/Makefile
+++ b/games/prboom/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2003/12/08 14:41:40 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2004/03/06 20:52:59 snj Exp $
 #
 
 DISTNAME=	prboom-2.2.4
@@ -10,11 +10,11 @@ MAINTAINER=	zuntum@NetBSD.org
 HOMEPAGE=	http://prboom.sourceforge.net/
 COMMENT=	Multiplayer-capable and modified version of DOOM
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 GNU_CONFIGURE=		YES
 
 #CONFIGURE_ARGS+=	--enable-gl
 
-.include "../../audio/SDL_mixer/buildlink2.mk"
-.include "../../net/SDL_net/buildlink2.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
+.include "../../net/SDL_net/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
