--- a/games/KoboDeluxe/Makefile
+++ b/games/KoboDeluxe/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2004/01/24 13:30:55 grant Exp $
+# $NetBSD: Makefile,v 1.7 2004/03/06 21:12:37 snj Exp $
 
 DISTNAME=	KoboDeluxe-0.4pre8
 PKGNAME=	${DISTNAME:S/pre/rc/}
@@ -10,11 +10,11 @@ MAINTAINER=	as@rsn.bth.se
 HOMEPAGE=	http://olofson.net/kobodl/
 COMMENT=	Multi-way scrolling shoot 'em up game for X
 
-USE_BUILDLINK2=	YES
+GNU_CONFIGURE=	YES
+USE_BUILDLINK3=	YES
 USE_GNU_TOOLS+=	make
 USE_X11=	YES
-GNU_CONFIGURE=	YES
 
-.include "../../devel/SDL/buildlink2.mk"
-.include "../../graphics/SDL_image/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
+.include "../../graphics/SDL_image/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
