--- a/devel/physfs/Makefile
+++ b/devel/physfs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2004/02/14 17:21:39 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2004/03/06 22:37:40 snj Exp $
 #
 
 DISTNAME=		physfs-0.1.8
@@ -9,15 +9,17 @@ MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.icculus.org/physfs/
 COMMENT=		Library providing abstract access to various archives
 
-USE_BUILDLINK2=		yes
-USE_PKGLOCALEDIR=	yes
+USE_BUILDLINK3=		yes
 USE_LIBTOOL=		yes
+USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
 USE_GCC_SHLIB=		yes
 
-CONFIGURE_ARGS+=	LIBS="${BUILDLINK_LDFLAGS.pthread}"
+CONFIGURE_ARGS+=	LIBS="${PTHREAD_LDFLAGS}"
 
-.include "../../devel/readline/buildlink2.mk"
-.include "../../devel/zlib/buildlink2.mk"
-.include "../../mk/pthread.buildlink2.mk"
+.include "../../devel/readline/buildlink3.mk"
+.include "../../devel/zlib/buildlink3.mk"
+
+.include "../../mk/curses.buildlink3.mk"
+.include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
