--- a/devel/SDLmm/Makefile
+++ b/devel/SDLmm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2004/02/14 17:21:36 jlam Exp $
+# $NetBSD: Makefile,v 1.5 2004/03/06 23:19:38 snj Exp $
 #
 
 DISTNAME=	SDLmm-0.1.8
@@ -10,9 +10,9 @@ MAINTAINER=	xtraeme@NetBSD.org
 HOMEPAGE=	http://sdlmm.sourceforge.net/
 COMMENT=	C++ Wrapper for the Simple DirectMedia Layer
 
-USE_BUILDLINK2=	YES
 GNU_CONFIGURE=	YES
+USE_BUILDLINK3=	YES
 USE_LIBTOOL=	YES
 
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
