--- a/games/bomberclone/Makefile
+++ b/games/bomberclone/Makefile
@@ -1,22 +1,22 @@
-# $NetBSD: Makefile,v 1.9 2004/02/07 15:40:21 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/07 00:08:40 snj Exp $
 #
 
-DISTNAME=		bomberclone-0.11.1
+DISTNAME=		bomberclone-0.11.2
 CATEGORIES=		games
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=bomberclone/}
 EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		wiz@NetBSD.org
-HOMEPAGE=		http://bomberclone.sourceforge.net/
+HOMEPAGE=		http://www.bomberclone.de/
 COMMENT=		Multi-player Bomberman clone
 
 CONFLICTS=		bomberclone-data-[0-9]*
 
-USE_BUILDLINK2=		yes
+USE_BUILDLINK3=		yes
 USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
 
-.include "../../audio/SDL_mixer/buildlink2.mk"
-.include "../../devel/SDL/buildlink2.mk"
-.include "../../graphics/SDL_image/buildlink2.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
+.include "../../devel/SDL/buildlink3.mk"
+.include "../../graphics/SDL_image/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
