--- a/games/rocksndiamonds/Makefile.common
+++ b/games/rocksndiamonds/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.8 2004/01/26 20:02:30 heinz Exp $
+# $NetBSD: Makefile.common,v 1.9 2004/03/07 00:39:43 snj Exp $
 #
 
 DISTNAME=	rocksndiamonds-3.0.8
@@ -8,7 +8,7 @@ MASTER_SITES=	http://www.artsoft.org/RELEASES/unix/rocksndiamonds/
 MAINTAINER=	heinz@NetBSD.org
 HOMEPAGE=	http://www.artsoft.org/rocksndiamonds/
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_GNU_TOOLS+=		make
 USE_X11=		YES
 USE_PKGINSTALL=		YES
