--- a/www/checkbot/Makefile
+++ b/www/checkbot/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2003/07/17 22:55:31 grant Exp $
+# $NetBSD: Makefile,v 1.16 2004/03/07 00:57:12 minskim Exp $
 #
 
 DISTNAME=	checkbot-1.67
@@ -14,7 +14,9 @@ DEPENDS+= 	p5-Net-[0-9]*:../../net/p5-Net
 DEPENDS+= 	p5-URI-[0-9]*:../../www/p5-URI
 DEPENDS+= 	p5-libwww-[0-9]*:../../www/p5-libwww
 
-USE_BUILDLINK2=	YES
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+USE_BUILDLINK3=	YES
 PERL5_PACKLIST=	${PERL5_SITEARCH}/auto/checkbot/.packlist
 
 .include "../../lang/perl5/module.mk"
