--- a/net/nicotine/Makefile
+++ b/net/nicotine/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2004/02/16 19:40:39 hubertf Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/07 01:28:46 minskim Exp $
 #
 
 DISTNAME=	nicotine-1.0.7
@@ -11,11 +11,11 @@ HOMEPAGE=	http://nicotine.thegraveyard.org/
 COMMENT=	Client for soulseek, a peer-to-peer network for music
 
 PYTHON_VERSIONS_ACCEPTED=       22pth 23pth
-USE_BUILDLINK2=	yes
+USE_BUILDLINK3=	yes
 PY_PATCHPLIST=	yes
 PYDISTUTILSPKG=	yes
 
 .include "../../lang/python/extension.mk"
-.include "../../x11/gtk2/buildlink2.mk"
-.include "../../x11/py-gtk2/buildlink2.mk"
+.include "../../x11/gtk2/buildlink3.mk"
+.include "../../x11/py-gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
