--- a/sysutils/Makefile
+++ b/sysutils/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.223 2004/03/06 11:39:31 grant Exp $
+# $NetBSD: Makefile,v 1.224 2004/03/07 01:28:50 heinz Exp $
 
 COMMENT=	System utilities
 
@@ -105,6 +105,7 @@ SUBDIR+=	mtools
 SUBDIR+=	mtoolsfm
 SUBDIR+=	nautilus
 SUBDIR+=	osname
+SUBDIR+=	p5-Sys-Hostname-Long
 SUBDIR+=	p5-Unix-Syslog
 SUBDIR+= 	pciutils
 SUBDIR+=	pcvt-utils
