--- a/audio/gkrellm-volume/Makefile
+++ b/audio/gkrellm-volume/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2004/02/24 22:39:26 cube Exp $
+# $NetBSD: Makefile,v 1.12 2004/03/07 03:29:15 minskim Exp $
 
 DISTNAME=	gkrellm-volume-2.1.9
 WRKSRC=		${WRKDIR}/gkrellm-volume
@@ -18,6 +18,7 @@ USE_PKGLOCALEDIR=	YES
 MAKE_ENV+=	LOCALEDIR=${PREFIX}/${PKGLOCALEDIR}/locale \
 		enable_nls=1
 
+.include "../../devel/pkgconfig/buildlink3.mk"
 .include "../../sysutils/gkrellm/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/ossaudio.buildlink3.mk"
