--- a/mail/ruby-tmail/Makefile
+++ b/mail/ruby-tmail/Makefile
@@ -1,34 +1,35 @@
-# $NetBSD: Makefile,v 1.2 2003/07/17 21:47:00 grant Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/07 03:32:36 taca Exp $
 # FreeBSD: ports/mail/ruby-tmail/Makefile,v 1.10 2001/01/27 09:46:32 knu Exp
 
-DISTNAME=	tmail-0.9.4
+DISTNAME=	tmail-0.10.8
 PKGNAME=	${RUBY_PKGNAMEPREFIX}${DISTNAME}
 CATEGORIES=	mail
-MASTER_SITES=	http://www.xdsl.ne.jp/Cd/aamine/soft/
+MASTER_SITES=	http://www.loveruby.net/archive/tmail/
 
 MAINTAINER=	taca@NetBSD.org
-HOMEPAGE=	http://www.xdsl.ne.jp/Cd/aamine/
+HOMEPAGE=	http://www.loveruby.net/en/tmail.html
 COMMENT=	Mail manipulating library for Ruby including MIME multipart support
 
 DEPENDS+= 	${RUBY_PKGNAMEPREFIX}racc-runtime>=1.3.6:../../devel/ruby-racc-runtime
-DEPENDS+=	${RUBY_PKGNAMEPREFIX}strscan>=0.6.1:../../devel/ruby-strscan
 
 DIST_SUBDIR=	ruby
-USE_RUBY_AMSTD=	yes
-USE_RUBY_SETUP=	yes
 
-post-patch:
-	${RUBY} -i -ne '/\btmail\b/ and print' \
-		${WRKSRC}/ext/PATHCONV ${WRKSRC}/lib/PATHCONV
-	for d in cparse cscan; do ${RM} -rf ${WRKSRC}/ext/$$d; done
-	for d in amstd raccrt strscan; do ${RM} -rf ${WRKSRC}/lib/$$d; done
+USE_RUBY_SETUP=	# defined
 
 post-install:
-	${INSTALL_DATA_DIR} ${RUBY_EXAMPLESDIR}/tmail
-	${CP} -R ${WRKSRC}/sample/* ${RUBY_EXAMPLESDIR}/tmail
+	${INSTALL_DATA_DIR} ${RUBY_DOCDIR}/tmail/en
+	${INSTALL_DATA} ${WRKSRC}/BUGS ${WRKSRC}/ChangeLog ${WRKSRC}/TODO \
+		${RUBY_DOCDIR}/tmail
+	${INSTALL_DATA} ${WRKSRC}/Incompatibilities ${WRKSRC}/README.en \
+		${RUBY_DOCDIR}/tmail/en
+	${INSTALL_DATA} ${WRKSRC}/doc.en/*.html ${RUBY_DOCDIR}/tmail/en
 	${INSTALL_DATA_DIR} ${RUBY_DOCDIR}/tmail/ja
-	${CP} -R ${WRKSRC}/README.en ${WRKSRC}/doc.en/* ${RUBY_DOCDIR}/tmail
-	${CP} -R ${WRKSRC}/README.ja ${WRKSRC}/doc.ja/* ${RUBY_DOCDIR}/tmail/ja
+	${INSTALL_DATA} ${WRKSRC}/Incompatibilities.ja ${WRKSRC}/README.ja \
+		${RUBY_DOCDIR}/tmail/ja
+	${INSTALL_DATA} ${WRKSRC}/doc.ja/*.html ${RUBY_DOCDIR}/tmail/ja
+	${INSTALL_DATA_DIR} ${RUBY_EXAMPLESDIR}/tmail/data
+	${INSTALL_DATA} ${WRKSRC}/sample/*.rb ${RUBY_EXAMPLESDIR}/tmail
+	${INSTALL_DATA} ${WRKSRC}/sample/data/* ${RUBY_EXAMPLESDIR}/tmail/data
 
 .include "../../lang/ruby-base/Makefile.common"
 .include "../../mk/bsd.pkg.mk"
